# linstor-api-py

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  genindex.html  index.html  introduction.html  linstor.html  linstor_tests.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.cfg.py2  setup.cfg.sles15  setup.py  tests.py
_sources/: linstor.rst.txt
_static/: documentation_options.js
debian/: changelog  clean  control  copyright  rules
doc/: Makefile  conf.py  index.rst  introduction.rst  linstor.protobuf_to_dict.rst  linstor.rst  make.bat
linstor/: __init__.py  config.py  errors.py  kv.py  linstorapi.py  resource.py  resourcegroup.py  responses.py  size_calc.py  version.py
linstor/protobuf_to_dict/: __init__.py
linstor_tests/: __init__.py  test_linstorapi.py  test_responses.py  test_utils.py
tests/: __init__.py
