[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-linstor"
version = "1.27.1"
description = "Linstor python api"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "Rene Peinthor", email = "rene.peinthor@linbit.com" },
    { name = "Roland Kammerer", email = "roland.kammerer@linbit.com" },
    { name = "Gabor Hernadi", email = "gabor.hernadi@linbit.com" },
    { name = "Moritz Wanzenboeck", email = "moritz.wanzenboeck@linbit.com" },
]
maintainers = [
    { name = "Rene Peinthor", email = "rene.peinthor@linbit.com" },
]
requires-python = ">= 3.6"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[project.urls]
Homepage = "https://github.com/LINBIT/linstor-api-py"
Documentation = "https://linbit.github.io/linstor-api-py/"
Repository = "https://github.com/LINBIT/linstor-api-py.git"
Issues = "https://github.com/LINBIT/linstor-api-py/issues"
Changelog = "https://github.com/LINBIT/linstor-api-py/blob/master/CHANGELOG.md"
